updated website to correctly work on mobile and added new/updated information

--- a/styles/global.css
+++ b/styles/global.css
@@ -39,22 +39,24 @@ h1, h2, h3, h4, h5, h6 {
     height: auto;
     padding: 30px;
     margin-bottom: 30px;
+    margin-top: 30px;
     box-shadow: var(--shadow);
 }
 
 .floating-box.long {
     margin-top: 30px;
 }
+
 .floating-box.wide {
     max-width: 100rem;
-    width: 90%;
+    width: 80%;
 }
 
 .floating-box.center {
     text-align: center;
 }
 
-.nav a{
+.nav a {
     margin-right: 10px;
 }
 
@@ -76,32 +78,10 @@ a:hover .tooltip {
 }
 
 @media screen and (max-width: 699px) {
-    /* shows names on mobile */
-    .tooltip {
-        position: relative;
-        margin-top: 0;
-        margin-left: 0;
-        background: none;
-        color: inherit;
-        padding: 0;
-        font-size: inherit;
-        box-shadow: none;
-        visibility: visible;
-        z-index: 0;
-    }
-
     .floating-box {
         padding: 5%;
-        max-width: 90%;
-        margin-top: 0;
+        width: 80%;
         margin-left: 0;
         margin-right: 0;
-    }
-
-
-    .floating-box .nav {
-        display: grid;
-        text-align: left;
-        margin: 15px;
     }
 }
